# alphabet_soup_refactor

./: README.md  puzzle_input.txt  pyproject.toml
src/alphabet_soup/: __main__.py  cli.py  core.py
test/: test_core.py
