[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphabet-soup"
version = "0.1.0"
description = "A reusable word-search solver for newspapers and puzzles."
readme = "README.md"
requires-python = ">=3.6"
authors = [
  { name = "Habeeb Babajide", email = "babajidehabeeb@yahoo.com" }
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/yourusername/alphabet_soup"
Repository = "https://github.com/yourusername/alphabet_soup.git"

[project.scripts]
alphabet-soup = "alphabet_soup.cli:main"

